refactor: 이미지 응답 구조 개선 및 URL 생성 로직 분리